# amf-rag-agent

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.cpu  Dockerfile.spaces  Dockerfile.ui  README.md  docker-compose.yml  main.py  prometheus.yml  pyproject.toml
.github/workflows/: ci.yml
data/: manifest.json
data/vectorstore/: chroma.sqlite3
data/vectorstore/22a2d535-9be0-4cfc-b2e8-bbe0d9c05690/: index_metadata.pickle
data/vectorstore/30bf5bba-4389-41a7-ab7a-dc1aba31a1b0/: index_metadata.pickle
data/vectorstore/dd03069f-cfce-487a-9c40-de185fa974da/: index_metadata.pickle
data/vectorstore/fee47cfc-b543-4636-aa13-af74b0208c8d/: index_metadata.pickle
k8s/: deployment.yaml  hpa.yaml  metrics-patch.yaml  service.yaml
k8s/gke/: README.md  deployment.yaml  service.yaml
notebooks/: test_llm.py
scripts/: backfill_es.py  check_chunks.py  check_rate_limit.py  eval_dataset.py  run_eval.py
src/amf_rag_agent/: config.py  session_store.py
src/amf_rag_agent/agent/: graph.py  graph_v2.py  loop.py
src/amf_rag_agent/api/: main.py
src/amf_rag_agent/ingestion/: chunker.py  ingest.py  parser.py  parser_fr.py
src/amf_rag_agent/retrieval/: bm25_store.py  embedder.py  es_store.py  query_expander.py  reranker.py  store.py
src/amf_rag_agent/ui/: app.py
tests/: test_chunker.py  test_config.py  test_retrieval.py  test_retry.py
