[project]
name = "amf-rag-agent"
version = "0.1.0"
description = "Project about making an Agentic AI RAG system using AMF files ressources"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.104.0",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amf_rag_agent"]
