[project]
name = "amf-rag-agent"
version = "0.1.0"
description = "Project about making an Agentic AI RAG system using AMF files ressources"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.104.0",
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "langchain-anthropic>=1.4.3",
    "langgraph>=1.2.2",
    "langsmith>=0.8.5",
    "lxml>=6.1.1",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.57.0",
    "uvicorn>=0.47.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amf_rag_agent"]

[tool.uv]
torch-backend = "cpu"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
